# ROS_scripts

./: README.md
moveit_config_pkg/: CMakeLists.txt  package.xml
moveit_config_pkg/src/: moveGroupInterface.cpp  multiple_groups.cpp  pose.cpp
owi/: CMakeLists.txt  package.xml
scripts/: go_joint_gripper.py
src/: joint_states_pub.cpp
